# rust-cloudflare-axum-worker

./: .gitignore  .lintstagedrc.json  Cargo.toml  Makefile  README.md  act.json  biome.json  package-lock.json  package.json  tsconfig.json
.github/actions/node/: action.yml
.github/actions/rust/: action.yml
.github/workflows/: checks.yml  preview.yml  release.yml
.gitlab/: ci-pipeline.yml
integration/: env.d.ts  global-setup.ts  vitest.config.ts
integration/tests/: request.test.ts
src/: lib.rs  utils.rs
templates/: example.html
wrangler/: config.toml
