[package]
name = "rust-cloudflare-axum-worker"

version = "0.1.1"
edition = "2021"
description = "A Rust worker example for Cloudflare Workers using Axum"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
axum = { version = "0.7.5", default-features = false, features = ["json", "macros"] }
axum-wasm-macros = "0.1.1"
tower-service = "0.3.2"
tower-http = { version = "0.5.2", features = ["cors"] }
worker = { version = "0.1.0", features = ["http"] }
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0.198", features = ["derive"] }
oneshot = "0.1.6"
url = "2.5.0"
askama = "0.12.1"
